--- a/templates/index.html
+++ b/templates/index.html
@@ -99,7 +99,7 @@ section {
         csrfmiddlewaretoken:$('input[name=csrfmiddlewaretoken]').val(),
       },
       success: function(data){
-        $('h2').html("www.surls.ga/"+data)
+        $('h2').html("https://shortner123qwe.herokuapp.com/"+data)
       }
     });
   });
